# seg

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
cmake/: segConfig.cmake.in
examples/: 1_hello.cpp  2_multi_thread.cpp  3_visual_odometry.cpp  CMakeLists.txt
seg/: options.h  seg  seg.h  types.h  version.h
seg/core/: app.cpp  app.h  config.cpp  config.h  global_lock.cpp  global_lock.h  object_manager.cpp  object_manager.h  seg_impl.cpp
seg/gl/: camera.cpp  camera.h  general_renderer.cpp  general_renderer.h  grid_renderer.cpp  grid_renderer.h  origin_axis_renderer.h  scene.cpp  scene.h  shader.cpp  shader.h
seg/gl/shader/: grid.frag  grid.vert  shader.frag  shader.vert
seg/internal/: logger.cpp  logger.h
seg/object/: gl_object.cpp  gl_object.h  object.cpp  object.h  object_base.cpp  object_base.h  object_manager.cpp  object_manager.h  primitives.cpp  primitives.h  ui_object.h
seg/object/gl/: basic_renderers.h  path.cpp  path.h  pose.cpp  pose.h
seg/object/gl/basic_renderers/: line_renderer.cpp  pointcloud_renderer.cpp  static_line_renderer.cpp  static_mesh_renderer.cpp  static_pointcloud_renderer.cpp
seg/object/ui/: image.cpp  image.h
seg/resources/: roboto_regular.h
seg/ui/: controller.cpp  controller.h  fps_overlay.cpp  fps_overlay.h  general_inspector.cpp  general_inspector.h  main_menu.cpp  main_menu.h  object_inspector_window.cpp  object_inspector_window.h  object_list_window.cpp  object_list_window.h
seg/utilities/: filesystem.cpp  filesystem.h  logger.h
